test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/recursive.build
defaults(
	example.echo
	Input: example.echo()
)
